modification couleur text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<body style="background-color: blueviolet;">
+<body style="background-color: blueviolet; color: chartreuse;">
     <h1>Bonjour
         <p>Test github </p>
         <p>On fais une premierer modif</p>
