--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <p>Test github </p>
         <p>On fais une premierer modif</p>
     </h1>
+    <h2>On avance vers l'envoie a github</h2>
 </body>
 
 </html>
