--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <h1>Bonjour
         <p>Test github </p>
         <p>On fais une premierer modif</p>
+        <button>Click ici mon pote</button>
     </h1>
     <h2>On avance vers l'envoie a github</h2>
 </body>
